# dtc

./: Makefile  Makefile.am  Makefile.in  configure  configure.ac  srcpos.c  version_gen.h.in
libfdt/: Makefile.am  Makefile.in  configure  configure.ac
